--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-777.7KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-357.7KB/s(Youtube:不良林), server: 5.183.176.93, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-262.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-6.33MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-387.3KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-490.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-538.5KB/s(Youtube:不良林), server: 5.183.176.93, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-503.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-426.4KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇯🇵 日本-387.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 捷克-1.29MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇯🇵 日本-205.4KB/s(Youtube:不良林), server: 5.183.176.80, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-503.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-790.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-895.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-426.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-387.8KB/s(Youtube:不良林)
-      - 捷克-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-205.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-895.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
