--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-363.5KB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-480.8KB/s(Youtube:不良林), server: 185.172.113.243, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-385.3KB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-785.2KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-940.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.70MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-926.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-10.30MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.30MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-619.1KB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-451.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-738.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-7.40MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-363.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-385.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-785.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-940.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.70MB/s(Youtube:不良林)
-      - 🇬🇧 英国-926.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇫🇷 法国-451.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-746.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
