--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-510.2KB/s(Youtube:不良林), server: 5.183.176.81, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-628.1KB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-332.6KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇯🇵 日本-804.7KB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.00MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-939.0KB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
+  - {name: 🇨🇳 中国-738.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-4.95MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇬🇧 英国-2.06MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇫🇷 法国-877.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 捷克-1.02MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-510.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-628.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-332.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-804.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-939.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-738.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 捷克-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
